# shake-pack

./: .hgignore  shake-pack.cabal  stack.yaml
src/Development/Shake/: Pack.hs
