name:                shake-pack
version:             0.2.0
synopsis:            Shake File Pack Rule
description:         Shake rule for tar-ing and compressing files with bzip2.
                     Uses bz2 C library on the system.
license:             BSD3
license-file:        LICENSE
author:              Luke Hoersten
maintainer:          luke@hoersten.org
category:            Shake, Development
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/LukeHoersten/shake-pack
bug-reports:         https://github.com/LukeHoersten/shake-pack/issues

library
  exposed-modules:     Development.Shake.Pack
  build-depends:       base       >= 4.7  && < 5
                     , bytestring >= 0.10 && < 1
                     , bzlib      >= 0.5  && < 0.6
                     , shake      >= 0.14 && < 1
                     , tar        >= 0.5  && < 0.6

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall -fwarn-tabs

source-repository head
  type:     git
  location: git://github.com/LukeHoersten/shake-pack.git
